--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,219 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nunito+Sans:opsz,wght@6..12,200&family=Poppins:wght@200;300;400;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+.background-container {
+    background-image: url('./resources/bgk-header.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+
 body {
     font-family: 'Rubik', sans-serif;
+    width: 100%;
+    height: 100vh;
+    
 }
 /* Nav Bar */
+
+header {
+    font-family: Poppins;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 22px;
+    
+}
+
+.header-wrapper {
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-around;
+}
+
+.logo-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 30px;
+    margin-left: 250px;
+}
+
+.nav-bar {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+ul {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+li {
+    color: white;
+    font-weight: 600;
+    list-style: none;
+    display: flex;
+}
+
+li:hover {
+    color: #68DACD;
+    cursor: pointer;
+}
+
+.logo-text {
+    font-family: Nunito Sans;
+    color: #56A4BF;
+    font-size: 40px;
+}
 
 
 /* Hero Section */
 
+.hero-section__wrapper {
+    font-family: Poppins;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+
+}
+
+.hero-bar {
+    width: 3%;
+    height: 2px;
+    background-color: #68DACD;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+h1 {
+   font-weight: 600;
+}
+
+.hero-text {
+    width: 50%;
+    margin-top: 20px;
+    font-weight: 200;
+}
+
+.hero-button {
+    position: relative;
+    margin-top: 50px;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: 600;
+    color:#68DACD;
+    background-color: transparent;
+    border-radius: 5px;
+    border-color: #68DACD;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.hero-button:hover {
+    color: black;
+}
+.hero-button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: all 0.5s ease-in-out;
+    background-color: #68DACD;
+    border-radius: 5px;
+    visibility: hidden;
+    z-index: -1;
+    height: 10px;
+    width: 10px;
+}
+
+.hero-button:hover::after {
+    visibility: visible;
+    transform: scale(100) translateX(2px);
+}
+
+
 
 /* Our Story Section */
+
+.our-story {
+
+    min-height: 70vh;
+    font-family: Poppins;
+    justify-content: flex-end;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    width: 85%;
+
+
+}
+
+.story-text {
+    display: flex;
+    margin-left: 100px;
+    font-size: 22px;
+    flex-direction: column;
+    width: 50%;
+}
+
+.story-button {
+    width: 20%;
+    position: relative;
+    margin-top: 50px;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: 900;
+    color:#68DACD;
+    background-color: transparent;
+    border-radius: 5px;
+    border-color: #68DACD;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.story-button:hover {
+    color: black;
+}
+.story-button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: all 0.5s ease-in-out;
+    background-color: #68DACD;
+    border-radius: 5px;
+    visibility: hidden;
+    z-index: -1;
+    height: 10px;
+    width: 10px;
+}
+
+.story-button:hover::after {
+    visibility: visible;
+    transform: scale(100) translateX(2px);
+}
+
+.story-text h2 {
+    margin-bottom: 10px;
+    font-weight: 400;
+}
 
 
 /* Watch Our Story Section */
@@ -212,8 +412,466 @@ video:hover {
 
 /* Meet Our Team Section */
 
+.our-team-bar {
+    width: 15%;
+    height: 2px;
+    background-color: gray;
+    border-radius: 10px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.our-team_wrapper {
+    min-height: 85vh;
+    background-image: url(./resources/bgk-header.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: Poppins;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.our-team-text {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.our-team-text h4 {
+    margin-top: 40px;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.team-container_wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    color: white;
+    gap: 20px;
+}
+
+.hiring-button {
+    position: relative;
+    margin-top: 50px;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: 600;
+    color:#68DACD;
+    background-color: transparent;
+    border-radius: 5px;
+    border-color: #68DACD;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.hiring-button:hover {
+    color: black;
+}
+.hiring-button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: all 0.5s ease-in-out;
+    background-color: #68DACD;
+    border-radius: 5px;
+    visibility: hidden;
+    z-index: -1;
+    height: 10px;
+    width: 10px;
+}
+
+.hiring-button:hover::after {
+    visibility: visible;
+    transform: scale(100) translateX(2px);
+}
+
+
+.hiring-container p {
+    color: white;
+}
+
+
+.member-box {
+    border: 1px solid black;
+    padding: 80px 60px;
+    background-color: white;
+}
+
+.team-description-container {
+
+    padding: 15px 0px 15px 0px;
+    border-bottom: 1px solid white;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+}
+
+.hiring-container2 {
+    display: flex;
+    align-items: center;
+}
+
+.team-name {
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
 
 /* Contact Form Section */
 
 
 /* Footer Section */
+
+
+
+
+
+/* Media query */
+
+@media (max-width:480px) {
+    header {
+        font-size: 18px;
+    }
+
+    .header-wrapper {
+        margin-top: auto;
+        flex-direction: row;
+        align-items: center;
+        margin-right: 15px;
+    }
+
+    .logo-wrapper {
+        font-size: 10px;
+        margin: auto;
+        justify-content: center;
+        
+    }
+
+
+    nav ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 20px;
+        font-size: 10px;
+        place-items: center;
+
+    }
+
+    .contact-li {
+        grid-column: 2;
+        grid-row: 3;
+    }
+
+
+    .hero-section__wrapper {
+        font-size: 14px;
+        display: flex;
+    }
+
+    .hero-text {
+        width: 90%;
+    }
+
+    .hero-bar {
+        width: 10%;
+    }
+
+    .story-text h2 {
+        font-size: 24px;
+    }
+
+    .story-text p {
+        font-size: 14px;
+    }
+
+    .our-story {
+        width: 100%;
+    }
+
+    .story-image  img{
+        max-width: 25%;
+        margin-right: 40px;
+    }
+
+    .our-story {
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-end;
+        margin-top: 10px;
+    }
+
+    .story-text {
+        text-align: center;
+        font-size: 16px;
+        margin-left: 20px;
+        width: 100%;
+        align-items: center;
+        padding-bottom: 2.5em;
+        padding-right: 20px;
+        padding-left: 20px;
+        
+    }
+
+    .story-button {
+        width: 35%;
+
+    }
+
+    .our-team_wrapper {
+        font-size: 14px;
+        padding-bottom: 2.5em;
+    }
+
+    .team-container_wrapper {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .hiring-container p {
+        margin-top: 20px;
+    }
+
+    .hiring-button {
+        padding-bottom: 1em;
+    }
+
+}
+
+
+@media (max-width:768px) {
+    header {
+        font-size: 18px;
+    }
+
+    .header-wrapper {
+        margin-top: auto;
+        margin-right: 15px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .logo-wrapper {
+        font-size: 10px;
+        margin: auto;
+        justify-content: center;
+        
+    }
+
+
+    nav ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 20px;
+        font-size: 10px;
+        place-items: center;
+
+    }
+
+    .contact-li {
+        grid-column: 2;
+        grid-row: 3;
+    }
+
+
+    .hero-section__wrapper {
+        font-size: 14px;
+        display: flex;
+    }
+
+    .hero-text {
+        width: 90%;
+    }
+
+    .hero-bar {
+        width: 10%;
+    }
+
+    .story-text h2 {
+        font-size: 24px;
+    }
+
+    .story-text p {
+        font-size: 14px;
+    }
+
+    .our-story {
+        width: 100%;
+    }
+
+    .story-image  img{
+        max-width: 25%;
+        margin-right: 0;
+    }
+
+    .our-story {
+        width: 100%;
+        align-items: center;
+        margin-top: 10px;
+        display: grid;
+        place-items: center;
+        text-align: center;
+
+    }
+
+    .story-text {
+        text-align: center;
+        font-size: 16px;
+        margin-left: 20px;
+        width: 100%;
+        align-items: center;
+        padding-bottom: 2.5em;
+        padding-right: 20px;
+        padding-left: 20px;
+        
+    }
+
+    .story-button {
+        width: 35%;
+
+    }
+
+    .our-team_wrapper {
+        font-size: 14px;
+        padding-bottom: 2.5em;
+    }
+
+    .team-container_wrapper {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .hiring-container p {
+        margin-top: 20px;
+    }
+
+    .hiring-button {
+        padding-bottom: 1em;
+    }
+
+}
+
+@media (min-width:1024px) and (max-width: 1024px) {
+    header {
+        font-size: 18px;
+    }
+
+    .header-wrapper {
+        margin-top: auto;
+        margin-right: 15px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .logo-wrapper {
+        font-size: 10px;
+        margin: auto;
+        justify-content: center;
+        
+    }
+
+
+    nav ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 20px;
+        font-size: 10px;
+        place-items: center;
+
+    }
+
+    .contact-li {
+        grid-column: 2;
+        grid-row: 3;
+    }
+
+
+    .hero-section__wrapper {
+        font-size: 14px;
+        display: flex;
+    }
+
+    .hero-text {
+        width: 90%;
+    }
+
+    .hero-bar {
+        width: 10%;
+    }
+
+    .story-text h2 {
+        font-size: 24px;
+    }
+
+    .story-text p {
+        font-size: 14px;
+    }
+
+    .our-story {
+        width: 100%;
+    }
+
+    .story-image  img{
+        max-width: 25%;
+        margin-right: 0;
+    }
+
+    .our-story {
+        width: 100%;
+        align-items: center;
+        margin-top: 10px;
+        display: grid;
+        place-items: center;
+        text-align: center;
+
+    }
+
+    .story-text {
+        text-align: center;
+        font-size: 16px;
+        margin-left: 20px;
+        width: 100%;
+        align-items: center;
+        padding-bottom: 2.5em;
+        padding-right: 20px;
+        padding-left: 20px;
+        
+    }
+
+    .story-button {
+        width: 35%;
+
+    }
+
+    .our-team_wrapper {
+        font-size: 14px;
+    }
+
+    .team-container_wrapper {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        max-height: 80vh;
+       
+    }
+
+    .hiring-container {
+        margin-top: 20px;
+    }
+
+}
+
+
+
+
+/* Media query */
