--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nunito+Sans:opsz,wght@6..12,200&family=Poppins:wght@200;300;400;900&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -42,11 +43,11 @@ header {
     align-items: center;
     gap: 10px;
     font-size: 30px;
-    margin-left: 250px;
+    margin-left: 20px;
 }
 
 .nav-bar {
-    display: flex;
+    display: none;
     align-items: center;
     font-size: 16px;
     letter-spacing: 1px;
@@ -74,6 +75,78 @@ li:hover {
     color: #56A4BF;
     font-size: 40px;
 }
+
+/* Menu mobile */
+
+.burger-menu {
+    display: flex;
+    /* width:fit-content;
+    height:fit-content */
+    justify-content: flex-end;
+}
+
+#checkbox {
+    display: none;
+  }
+  
+.toggle {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    transition-duration: .3s;
+    z-index: 100;
+    margin-right: 20px;
+  }
+
+.toggle.show-dropdown {
+    display: block;
+    position: absolute;
+    top: 45px;
+    background-color: #333;
+    width: 100%;
+    right: 0;
+    text-align: center;
+    padding: 1rem;
+  }
+  
+.bars {
+    width: 100%;
+    height: 2px;
+    background-color: rgb(76, 189, 151);
+    border-radius: 5px;
+    transition-duration: .3s;
+  }
+  
+#checkbox:checked + .toggle .bars {
+    margin-left: 13px;
+  }
+  
+#checkbox:checked + .toggle #bar2 {
+    opacity: 0;
+    width: 0;
+    margin-left: 0;
+    transition-duration: .3s;
+  }
+  
+#checkbox:checked + .toggle #bar1 {
+    transform: rotate(45deg);
+    transition-duration: .3s;
+    transform-origin: left center;
+    translate: 0 -2px;
+  }
+  
+#checkbox:checked + .toggle #bar3 {
+    transform: rotate(-45deg);
+    transition-duration: .3s;
+    transform-origin: left center;
+    translate: 0 2px;
+  }
 
 
 /* Hero Section */
@@ -222,7 +295,7 @@ h1 {
     background-image: url("resources/bgk-middle.png");
     background-size: cover;
     background-repeat:no-repeat ;
-    width: 100vw;
+    /* width: 100vw; */
     height: 50vh;
 
 }
@@ -265,7 +338,7 @@ h1 {
     background-image: url("resources/bgk-middle.png");
     background-size: cover;
     background-repeat:no-repeat ;
-    width: 100vw;
+    /* width: 100vw; */
     height: 50vh;
 }
 
@@ -317,7 +390,7 @@ video:hover {
 
 .expertise-section {
 
-    width: 100vw;
+    /* width: 100vw; */
     /* height: 50vh; */
 
 }
@@ -542,16 +615,16 @@ video:hover {
     }
 
     .header-wrapper {
-        margin-top: auto;
+        margin-top: 1rem;
         flex-direction: row;
         align-items: center;
-        margin-right: 15px;
+        /* margin-right: 15px; */
     }
 
     .logo-wrapper {
         font-size: 10px;
-        margin: auto;
-        justify-content: center;
+        /* margin: auto; */
+        justify-content: flex-start;
         
     }
 
@@ -654,16 +727,18 @@ video:hover {
     }
 
     .header-wrapper {
-        margin-top: auto;
-        margin-right: 15px;
+        margin-top: 1rem;
+        /* margin-right: 15px; */
         display: grid;
         grid-template-columns: 1fr 1fr;
+        align-items: center;
+        justify-content: space-between !important;
     }
 
     .logo-wrapper {
         font-size: 10px;
-        margin: auto;
-        justify-content: center;
+        /* margin: auto; */
+        justify-content: flex-start;
         
     }
 
@@ -671,7 +746,7 @@ video:hover {
     nav ul {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        margin-top: 20px;
+        margin-top: 1rem;
         font-size: 10px;
         place-items: center;
 
@@ -871,7 +946,14 @@ video:hover {
 
 }
 
-
+@media screen and (min-width: 769px) {
+    .nav-bar {
+      display: flex;
+    }
+    .burger-menu {
+        display: none;
+    }
+  }
 
 
 /* Media query */
