--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ li:hover {
     /* width:fit-content;
     height:fit-content */
     justify-content: flex-end;
+    align-items: center;
 }
 
 #checkbox {
@@ -249,7 +250,7 @@ h1 {
 }
 
 .story-button {
-    width: 20%;
+    /* width: 20%; */
     position: relative;
     margin-top: 50px;
     padding: 15px;
@@ -263,6 +264,7 @@ h1 {
     transition: all 0.5s ease-in-out;
     overflow: hidden;
     z-index: 1;
+    width: max-content;
 }
 
 .story-button:hover {
@@ -725,6 +727,7 @@ video:hover {
 }
 
 
+
 @media (max-width:768px) {
     header {
         font-size: 18px;
@@ -732,12 +735,12 @@ video:hover {
 
     .header-wrapper {
         margin-top: 1rem;
-        /* margin-right: 15px; */
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+      margin-right: 15px; 
+        display: grid; 
+       grid-template-columns: 1fr 1fr;
         align-items: center;
         justify-content: space-between !important;
-    }
+ }
 
     .logo-wrapper {
         font-size: 10px;
@@ -959,5 +962,13 @@ video:hover {
     }
   }
 
+  @media screen and (min-width: 769px) and (max-width: 992px) {
+  .header-wrapper {
+        justify-content: space-between;
+  }
+  .burger-menu > .toggle {
+        margin-right: 3rem;
+  }
+}
 
 /* Media query */
