--- a/styles.css
+++ b/styles.css
@@ -198,15 +198,18 @@ display: block;
     background-repeat: no-repeat;
     height: 402px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     color: white;
 } 
 
 .footer__wrapper {
     display: flex;
-    gap: 65px;
+    gap: 100px;
     width: 1280px;
-    padding-top: 4rem;
+    padding-top: 4rem;  
+    padding-bottom: 20px;
 } 
 
 
@@ -252,7 +255,7 @@ display: block;
 
 .footer__input {
     height: 47px;
-    width: 212px;
+    width: 250px;
     padding-left: 25px;
 }
 
@@ -262,3 +265,18 @@ display: block;
     opacity: .5;
 }
 
+.footer__wrapper-bottom  {
+  display: flex;
+  justify-content: space-between;
+  width: 1280px;
+  
+} 
+
+.footer__wrapper-bottom li {
+    display: flex;
+  } 
+
+.footer__wrapper-bottom ul {
+    display: flex;
+    gap: 15px;
+  } 
