--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,42 @@ header {
     font-size: 16px;
     letter-spacing: 1px;
 }
+
+.nav-bar-mobile {
+    display: none;
+    align-items: center;
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-align: center;
+    
+}
+
+.nav-bar-mobile.show {
+    display: block;
+    width: 100%;
+    z-index: 100;
+    position: absolute;
+    top: 120px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.nav-bar-mobile.show ul {
+    display: block;
+    left: 50%;
+    right: 50%;
+    text-align: center;
+}
+
+.nav-bar-mobile.show ul li {
+    display: block;
+    text-align: center;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+
 ul {
     display: flex;
     justify-content: center;
