--- a/styles.css
+++ b/styles.css
@@ -633,14 +633,14 @@ video:hover {
     justify-content: center;
     gap: 3rem;
     height: 60vh;
+    padding-bottom: 800px;
+    
 }
 
 .contact-form-section__contact-form-wrapper {
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
-    
-
 }
 
 .contact-form-section__contact-form-wrapper input {
@@ -1152,23 +1152,28 @@ textarea {
 
 .footer {
     background-image: url(./resources/bgk-footer.png);
-    background-size: 100% auto;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    height: 402px;
+    height: 40vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
+    padding-bottom: 4rem;
 } 
 
 .footer__wrapper {
     display: flex;
     gap: 100px;
     width: 1280px;
-    padding-top: 4rem;  
-    padding-bottom: 20px;
+    padding-top: 6rem;  
 } 
+
+.footer__logo {
+    display: flex;
+    gap: 15px;
+}
 
 
 .footer__info-card {
@@ -1183,7 +1188,7 @@ textarea {
 
 .footer__info-card ul {
     display: flex;
-    gap: .5rem
+
 }
 
 .footer__card-headline {
@@ -1238,4 +1243,6 @@ textarea {
     display: flex;
     gap: 15px;
   } 
+
+
 /* Media query */
