fixed the display of nav-bar-mobile for min-width: 992px, style.css line 1184

--- a/styles.css
+++ b/styles.css
@@ -1181,6 +1181,9 @@ textarea {
     .burger-menu {
         display: none;
     }
+    .nav-bar-mobile.show {
+        display: none;
+    }
   }
 
   @media screen and (min-width: 769px) and (max-width: 992px) {
