make small adjustments

--- a/styles.css
+++ b/styles.css
@@ -1154,19 +1154,20 @@ textarea {
     background-image: url(./resources/bgk-footer.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    height: 60vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: auto;
     color: white;
 } 
 
 .footer__wrapper {
+    max-width: 80%;
+    margin: auto;
+    padding: 40px;
+} 
+
+.footer__info-cards {
     display: flex;
     gap: 100px;
-    width: 1280px;
-} 
+}
 
 .footer__logo {
     display: flex;
@@ -1175,7 +1176,7 @@ textarea {
 
 
 .footer__info-card {
-    max-width: 450px;
+    max-width: 33%;
     
 }
 
@@ -1226,11 +1227,9 @@ textarea {
     opacity: .5;
 }
 
-.footer__wrapper-bottom  {
+.footer__bottom  {
   display: flex;
-  justify-content: space-between;
-  width: 1280px;
-  
+  justify-content: space-between;  
 } 
 
 .footer__wrapper-bottom li {
@@ -1242,5 +1241,12 @@ textarea {
     gap: 15px;
   } 
 
+  @media (max-width: 1220px) {
+    .footer__wrapper{
+        margin: auto;
+    }
+    .footer__info-cards {
+        max-width: 100%;
+    }
 
-/* Media query */
+  }
